SimLang/src/test/resources/test/coco/invalid/WrongRanges.sim
sim WrongSemanticRanges {
  sim_render_frequency -60ms;
  map_name error.osm;
}